changes for run sample on my VM

--- a/src/webrtc/samples/webrtcstreamer/client/index.ejs
+++ b/src/webrtc/samples/webrtcstreamer/client/index.ejs
@@ -22,7 +22,7 @@
 
         // Symple client options
         CLIENT_OPTIONS = {
-            url: 'http://localhost:<%- port %>',
+            url: 'http://10.10.102.96:<%- port %>',
             // url: 'http://sympleserver.sourcey.com:<%- port %>',
             // secure: true,
             peer: <%- JSON.stringify(peer) %>
